# netsuite

./: .editorconfig  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .tool-versions  .travis.yml  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  mypy.ini  pyproject.toml  setup.py  sitemap.xml  tox.ini
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  codecov.yml  docs.yml
docs/: index.md
examples/: soap-api.py
netsuite/: __init__.py  __main__.py  client.py  config.py  constants.py  helpers.py  json.py  passport.py  rest_api.py  rest_api_base.py  restlet.py  types.py  util.py
netsuite/cli/: helpers.py  interact.py  main.py  misc.py  rest_api.py  restlet.py  soap_api.py
netsuite/soap_api/: __init__.py  client.py  decorators.py  exceptions.py  helpers.py  passport.py  transports.py  zeep.py
search/: search_index.json
tests/: conftest.py  test_base.py  test_odbc.py  test_rest_api.py  test_restlet.py  test_soap_api.py
