[tool.poetry]
name = "netsuite"
version = "0.8.0"
description = "Make async requests to NetSuite SuiteTalk SOAP/REST Web Services and Restlets"
authors = ["Jacob Magnusson <m@jacobian.se>"]
license = "MIT"
readme = "README.md"
homepage = "https://jmagnusson.github.io/netsuite/"
repository = "https://github.com/jmagnusson/netsuite"
documentation = "https://jmagnusson.github.io/netsuite/"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = "^3.7"
authlib = "^0.15.3"
# As per httpx recommendation we will lock to a fixed minor version until 1.0 is released
httpx = "~0.18"
pydantic = "^1.8"
orjson = {version = "^3", optional = true}
ipython = {version = "^7", optional = true}
zeep = {version = "^4.0.0", optional = true, extras = ["async"]}
oauthlib = "^3.1.0"

[tool.poetry.extras]
soap_api = ["zeep"]
cli = ["ipython"]
orjson = ["orjson"]
all = ["zeep", "ipython", "orjson"]

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.9"
isort = "^5.8"
mkdocs-material = "^7"
mypy = "^0.812"
pytest = "^6"
pytest-cov = "^2.11"

[tool.poetry.scripts]
netsuite = 'netsuite.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py37", "py38"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
